--- a/changelog/145.bugfix.rst
+++ b/changelog/145.bugfix.rst
@@ -1,5 +1,5 @@
-Fix #56: Correct Callisto client and observatory fallback
----------------------------------------------------------
+Correct Callisto client and observatory fallback
+------------------------------------------------
 
 - Correct the client name and observatory fallback for Callisto vs eCallisto
   so that data can be correctly downloaded and plotted.
