--- a/changelog/142.bugfix.rst
+++ b/changelog/142.bugfix.rst
@@ -1,1 +1,1 @@
-Migrated all network clients to the new unified Scraper format introduced in ``sunpy`` 6.1, resolving compatibility issues with ``sunpy`` 7.1.0.
+Migrated network clients to the unified ``sunpy.net.scraper.Scraper`` format, fixing scraper-based searches with newer ``sunpy`` releases.
